blue-green/blue.yml


# Deployment

apiVersion: apps/v1
kind: Deployment

metadata:
  name: blue
  namespace: web
  annotations:
    kubernetes.io/change-cause: 'blue version 1'

spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      role: blue
  template:
    metadata:
      labels:
        role: blue
    spec:
      containers:
        - name: web
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: bluemount
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: bluemount
          configMap:
            name: v1

# Service

---

apiVersion: v1
kind: Service

metadata:
  name: blueservice
  namespace: web

spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector: 
    role: blue
